nChannel Mark XLIII

--- a/Assignments/akanios/nChannel Mimic/index.html
+++ b/Assignments/akanios/nChannel Mimic/index.html
@@ -90,11 +90,15 @@
 			<div class="footer">
 				<div class="connect">
 					<h3>Connect</h3>
-					<i class="fa fa-facebook bottombtn"></i>
-					<i class="fa fa-twitter bottombtn"></i>
-					<i class="fa fa-linkedin-square bottombtn"></i>
-					<i class="fa fa-youtube bottombtn"></i>
-					<i class="fa fa-google-plus bottombtn"></i>
+					<div class="facebtn"><a href="https://www.facebook.com/nChannelCloud"><i class="fa fa-facebook bottombtn"></a></i></div>
+
+					<div class="twibtn"><a href="https://twitter.com/nChannelCloud"><i class="fa fa-twitter bottombtn"></a></i></div>
+
+					<div class="linbtn"><a href="https://www.linkedin.com/company/nchannel-incorporated"><i class="fa fa-linkedin-square bottombtn"></a></i></div>
+
+					<div class="youbtn"><a href="https://www.youtube.com/user/nChannel4Retail"><i class="fa fa-youtube bottombtn"></a></i></div>
+
+					<div class="goobtn"><a href="https://plus.google.com/+Nchannel/posts"><i class="fa fa-google-plus bottombtn"></a></i></div>
 				</div>
 
 			</div>
