--- a/Assignments/abrand/nchannel assignment/nchannelwebpage.html
+++ b/Assignments/abrand/nchannel assignment/nchannelwebpage.html
@@ -115,7 +115,7 @@
                         </div>
                         <div class="block" style="float: right">
                             <h3> Consumer goods </h3>
-                            <p>From large catalogs, to variable pricing structures and complex item mapping—we’ve got it all covered.</p>
+                            <p>From large catalogs, to variable pricing structures and complex item mapping, we've got it all covered.</p>
                             <a href="https://www.nchannel.com/industries/consumer-goods/"> Read More </a>
                         </div>
                         <div class="block">
