--- a/Assignments/abrand/nchannel assignment/nchannelwebpage.html
+++ b/Assignments/abrand/nchannel assignment/nchannelwebpage.html
@@ -25,12 +25,7 @@
                 <a href="https://www.nchannel.com" class="the-logo">
                     nChannel
                 </a>
-                                                            <ul class="nav"><li id="menu-item-43" class="mobile-hidden-menu-item menu-item menu-item-type-post_type menu-item-object-page menu-item-43"><a href="https://www.nchannel.com/news-resources/">news &amp; resources </a></li>
-<li id="menu-item-20" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-20"> <a href="https://www.nchannel.com/pricing/">pricing </a> </li>
-<li id="menu-item-19" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-14 current_page_item menu-item-19"> <a href="https://www.nchannel.com/industries/"> industries </a> </li>
-<li id="menu-item-310" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-310"> <a href="https://www.nchannel.com/connectors/"> connectors </a> </li>
-<li id="menu-item-18" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-18"> <a href="https://www.nchannel.com/products/"> products </a> </li>
-</ul>                    
+                                                            
 
                     <div id="dl-menu" class="dl-menuwrapper">
                         <button class="dl-trigger"> Open Menu </button>
@@ -104,16 +99,16 @@
     </button>
 
     <div id="industry-blocks" class="row" style="background-color: white">
-        <h2 class="section-heading" style="font-color: black" style="background-color: white"> Solutions by Industry </h2>
+        <h2 class="section-heading" style="font-color: black" style="background-color: white; text-align: center"> Solutions by Industry </h2>
         <div class="contain">
             <div class="blocks">
-                        <div class="block" class="row">
+                        <div class="block" class="row" style="float: left; width: 33%">
                             <div class="col-md-4"></div>
                             <h3> Outdoor and sporting goods </h3>
                             <p> Whether you are competing with big-box retailers or broadening your reach, we have the experience and knowledge to help your business make the mark. </p>
                             <a href="https://www.nchannel.com/industries/outdoor-and-sporting-goods/"> Read More </a>
                         </div>
-                        <div class="block" style="float: right">
+                        <div class="block" style="float: right; width:33%">
                             <h3> Consumer goods </h3>
                             <p>From large catalogs, to variable pricing structures and complex item mapping, we've got it all covered.</p>
                             <a href="https://www.nchannel.com/industries/consumer-goods/"> Read More </a>
@@ -124,13 +119,13 @@
                             <a href="https://www.nchannel.com/industries/home/"> Read More </a>
                         </div>
             </div>
-                <div class="blocks">
-                        <div class="block" style="font-color: black">
+                <div class="blocks" class="col-md-4">
+                        <div class="block" style="font-color: black; width: 33%" class="col-md-4">
                             <h3>Apparel</h3>
                             <p>You customers’ needs are complex, but the management of your inventory doesn't have to be. Simplify your management so you can focus on building a stronger business and providing excellent customer service.  </p>
                             <a href="https://www.nchannel.com/industries/apparel/">Read More</a>
                         </div>
-                                                                <div class="block">
+                                                                <div class="block" style="width: 33%; float: right"class="col-md-4">
                             <h3>Gift and novelty</h3>
                             <p>Keep your shelves stocked with unique, one-of-a-kind products without the headache of keeping all of that inventory and your suppliers straight. </p>
                             <a href="https://www.nchannel.com/industries/gift-and-novelty/">Read More</a>
@@ -149,13 +144,13 @@
         <div class="contain">
             <div class="text" class="col-md-6">
                 
-                <h2> Cloud integration </h2>
+                <h2 style=" text-align: center"> Cloud integration </h2>
                 <p> "Bridges" are created using nChannel Connectors. Registered customers download connectors for each system they want to connect to the nChannel platform. Connectors act as "listeners" that listen for any changes  such as new orders, or new items  made to any of your systems and automatically syncs changes to the nChannel portal.<br>
 <br>
                 Not only does the platform listen for changes, but it is smart enough to know what to do with changes it picks up. Customers can tell the system what to do and how to manage orders, items, and customer information. For example when nChannel receives a web order, push it to the POS system or if it receives an order for a particular item, push it to a selected supplier for fulfillment. You can tell the system to automatically download sales to your accounting system – or create a PO in the accounting system, when a work order is created in the POS system.</p>
 
                 <div class="whitebox" class="col-md-6">
-                    <h3> Questions from the cloud? </h3>
+                    <h3 style="text-align: center"> Questions from the cloud? </h3>
                     <p>There are many misconceptions about "the cloud". We guarantee a secure network.</p>
                     <a class="btn" href="https://www.nchannel.com/pci-compliance/"> FAQ </a>
                 </div>
