--- a/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.html
+++ b/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.html
@@ -19,11 +19,13 @@
 
 </head>
 <body>
-	<div class="contain">
-		<header class="header-fixed">
+	<div>
+		<header>
 			<div id="poof">
 			</div>
-			<img class="inline" src="n.png">
+			<img src="n.png">
+			<a id="np" href="" class="rmen" style="margin-left: 205px;"><h5><strong>overview</strong></h5></a>
+			<a id="np" href="" class="rmen"><h5><strong>products</strong></h5></a>
 <!--
 			<div class="links">
 				<img id="logo" src="n.png">
