--- a/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.html
+++ b/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.html
@@ -24,8 +24,12 @@
 			<div id="poof">
 			</div>
 			<img src="n.png">
-			<a id="np" href="" class="rmen" style="margin-left: 205px;"><h5><strong>overview</strong></h5></a>
-			<a id="np" href="" class="rmen"><h5><strong>products</strong></h5></a>
+			<a id="np" href="" class="rmen" style="margin-left: 220px; font-weight: 900;"><h5>overview</h5></a>
+			<a href="" class="rmen"><h5>products</h5></a>
+			<a href="" class="rmen"><h5>connectors</h5></a>
+			<a href="" class="rmen"><h5>industries</h5></a>
+			<a href="" class="rmen"><h5>pricing</h5></a>
+			<a href="" class="rmen"><h5>news & resources</h5></a>
 <!--
 			<div class="links">
 				<img id="logo" src="n.png">
