--- a/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.html
+++ b/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.html
@@ -71,6 +71,17 @@
 			</div>
 -->
 		</header>
+		<div id="hbtn">
+			<a href=""><div class="sbtn navbtn" style="margin-left: 864px; background-color: #00b2ee;">
+				get a quote
+			</div></a>
+			<a href=""><div class="sbtn navbtn" style="background-color: #ee7541;">
+				1-844-533-1333
+			</div><a>
+			<a href=""><div class="sbtn navbtn" style="background-color: #3b3e4b;">
+				search
+			</div></a>
+		</div>
 
 		<div class="intro">
 			<h1 style= "line-height: 150%;">Multichannel... simplified</h1>
