Full nChannel Sticky Header
Wow. There's an awful lot going on in that little header.

--- a/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.html
+++ b/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.html
@@ -7,23 +7,24 @@
 
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
-	<link rel="stylesheet" href="styles/css/font-awesome.min.css">
+	<link rel="stylesheet" href="font-awesome-extract/font-awesome-4.2.0/css/font-awesome.min.css">
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
 	<script type="text/javascript" src="Sticky Header.js"></script>
 
-	<script type="text/javascript" src="Bootstrap_nChannel.js"></script>
-
 	<script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
 </head>
-<body>
+<body onload="preheader()">
 	<div>
 		<header>
 			<div id="poof">
+				<a id="index" href="" class="trmen" style="margin-left: 1030px;"><h6>contact</h6></a>
+				<p id="indey" class="trment" style="text-decoration: none; padding: 0 13px;">|</p>
+				<a id="indez" href="" class="trmen"><h6>support</h6></a>
 			</div>
-			<img src="n.png">
+			<a href=""><img src="n.png"></a>
 			<a id="np" href="" class="rmen" style="margin-left: 220px; font-weight: 900;"><h5>overview</h5></a>
 			<a href="" class="rmen"><h5>products</h5></a>
 			<a href="" class="rmen"><h5>connectors</h5></a>
@@ -79,7 +80,7 @@
 				1-844-533-1333
 			</div><a>
 			<a href=""><div class="sbtn navbtn" style="background-color: #3b3e4b;">
-				search
+				<i class="fa fa-search" style="color: #7f8291;font-size: 19px; font-weight: bolder;"></i>
 			</div></a>
 		</div>
 
@@ -157,22 +158,22 @@
 				<div class="col-md-3">			
 					<h3>News & Updates</h3>
 					<h4>October 21, 2014</h4>
-					<p>Drop shipping products can really</br  > improve your eCommerce</br  >business. You can expand... </br  ><a href=""><h4>View Article<h4></a>
+					<p>Drop shipping products can really</br  > improve your eCommerce</br  >business. You can expand... </br  ><a href=""><h4 style="text-decoration: underline;">View Article<h4></a>
 				</div>
 
 				<div class="col-md-3">
 					<h3>Explore & More</h3>
 					<div class="col-md-6" style="padding:0;">
-						<h4>about</h4>
-						<h4>partners</h4>
-						<h4>privacy policy</h4>
-						<h4>contact</h4>		
+						<a href="" class="brmen"><h4>about</h4><a>
+						<a href="" class="brmen"><h4>partners</h4><a>
+						<a href="" class="brmen"><h4>privacy policy</h4><a>
+						<a href="" class="brmen"><h4>contact</h4><a>		
 					</div>
 
 					<div class="col-md-6" style="padding:0;">
-						<h4>security</h4>
-						<h4>pci compliance</h4>
-						<h4>for investors</h4>
+						<a href="" class="brmen"><h4>security</h4><a>
+						<a href="" class="brmen"><h4>pci compliance</h4><a>
+						<a href="" class="brmen"><h4>for investors</h4><a>
 					</div>
 				</div>
 
