nChannel Font Awesome

--- a/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.html
+++ b/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.html
@@ -153,6 +153,15 @@
 
 				<div class="col-md-3">
 					<h3>Connect</h3>
+					<a href=""><div><i class="fa fa-facebook roundbtn" style="font-size: 20px; font-weight: 500;"></div></i></a>
+
+					<a href=""><div><i class="fa fa-twitter roundbtn conmar twitgoo" style="font-size: 20px; font-weight: 500;"></div></i></a>
+
+					<a href=""><div><i class="fa fa-linkedin roundbtn conmar linkedtube" style="font-size: 20px; font-weight: 500;"></div></i></a>
+
+					<a href=""><div><i class="fa fa-youtube roundbtn conmar linkedtube" style="font-size: 20px; font-weight: 500;"></div></i></a>
+
+					<a href=""><div><i class="fa fa-google-plus roundbtn conmar twitgoo" style="font-size: 20px; font-weight: 500;"></div></i></a>
 				</div>
 
 				<div class="col-md-3">			
