--- a/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.html
+++ b/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.html
@@ -92,22 +92,24 @@
 				</div>
 				<div class="col-md-2">
 
-						<div class="col-md-1">
-						</div>
-						<a><div class="col-md-10" style="color: white;">
-							<h4 class="button">
-								learn more
-							</h4>
-						</div></a>
-						<div class="col-md-1">
-						</div>
+					<div class="col-md-1">
+					</div>
+					<a><div class="col-md-10" style="color: white;">
+						<h4 class="button">
+							learn more
+						</h4>
+					</div></a>
+					<div class="col-md-1">
+					</div>
 
 				</div>
 				<div class="col-md-5">
 				</div>
 
-				
-			<img src="connect.png">
+			<div class="dots" style="background-image: url(dot-pat.png); background-repeat: repeat; margin-top: 178px;">
+			</div>
+
+			<img src="connect.png" style="margin-top: -310px; position: relative; z-index: 3;">
 		</div>
 
 		<div class="connect">
