--- a/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.html
+++ b/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.html
@@ -86,7 +86,7 @@
 
 		<div class="intro">
 			<h1 style= "line-height: 150%;">Multichannel... simplified</h1>
-			<h4 style= "line-height: 150%;">Build a stronger business with us: Simplify merchandising. Improve customer</br  >experience. Maximize revenue in every channel. Get control</h4>
+			<p style= "line-height: 150%; font-size: 20px;">Build a stronger business with us: Simplify merchandising. Improve customer</br  >experience. Maximize revenue in every channel. Get control</p>
 
 				<div class="col-md-5">
 				</div>
@@ -94,11 +94,11 @@
 
 					<div class="col-md-1">
 					</div>
-					<a><div class="col-md-10" style="color: white;">
-						<h4 class="button">
+					<div class="col-md-10" style="color: white;">
+						<a href""><h4 class="button">
 							learn more
-						</h4>
-					</div></a>
+						</h4></a>
+					</div>
 					<div class="col-md-1">
 					</div>
 
@@ -106,10 +106,10 @@
 				<div class="col-md-5">
 				</div>
 
-			<div class="dots" style="background-image: url(dot-pat.png); background-repeat: repeat; margin-top: 178px;">
+			<div class="dots" style="background-image: url(dot-pat.png); background-repeat: repeat; margin-top: 174px;">
 			</div>
 
-			<img src="connect.png" style="margin-top: -310px; position: relative; z-index: 3;">
+			<img src="connect.png" style="margin-top: -314px; position: relative; z-index: 3;">
 		</div>
 
 		<div class="connect">
