--- a/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.html
+++ b/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.html
@@ -109,7 +109,7 @@
 			<div class="dots" style="background-image: url(dot-pat.png); background-repeat: repeat; margin-top: 174px;">
 			</div>
 
-			<img src="connect.png" style="margin-top: -314px; position: relative; z-index: 3;">
+			<img src="connect.png" style="margin-top: -314px;">
 		</div>
 
 		<div class="connect">
