nChannel scrolling logo shell
Need to write the JS to make image scroll on and off the page.

--- a/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.html
+++ b/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.html
@@ -24,13 +24,15 @@
 				<p id="indey" class="trment" style="text-decoration: none; padding: 0 13px;">|</p>
 				<a id="indez" href="" class="trmen"><h6>support</h6></a>
 			</div>
-			<a href=""><img src="n.png"></a>
-			<a id="np" href="" class="rmen" style="margin-left: 220px; font-weight: 900;"><h5>overview</h5></a>
-			<a href="" class="rmen"><h5>products</h5></a>
-			<a href="" class="rmen"><h5>connectors</h5></a>
-			<a href="" class="rmen"><h5>industries</h5></a>
-			<a href="" class="rmen"><h5>pricing</h5></a>
-			<a href="" class="rmen"><h5>news & resources</h5></a>
+			<div class="fxdhdr">
+				<a href=""><img src="n.png"></a>
+				<a id="np" href="" class="rmen" style="margin-left: 220px; font-weight: 900;"><h5>overview</h5></a>
+				<a href="" class="rmen"><h5>products</h5></a>
+				<a href="" class="rmen"><h5>connectors</h5></a>
+				<a href="" class="rmen"><h5>industries</h5></a>
+				<a href="" class="rmen"><h5>pricing</h5></a>
+				<a href="" class="rmen"><h5>news & resources</h5></a>
+			</div>
 <!--
 			<div class="links">
 				<img id="logo" src="n.png">
@@ -85,7 +87,7 @@
 		</div>
 
 		<div class="intro">
-			<h1 style= "line-height: 150%;">Multichannel... simplified</h1>
+			<h1 style= "line-height: 150%;"><strong>Multichannel... simplified</strong></h1>
 			<p style= "line-height: 150%; font-size: 20px;">Build a stronger business with us: Simplify merchandising. Improve customer</br  >experience. Maximize revenue in every channel. Get control</p>
 
 				<div class="col-md-5">
@@ -96,7 +98,7 @@
 					</div>
 					<div class="col-md-10" style="color: white;">
 						<a href""><h4 class="button">
-							learn more
+							<strong>learn more</strong>
 						</h4></a>
 					</div>
 					<div class="col-md-1">
@@ -114,15 +116,142 @@
 
 		<div class="connect">
 
-			<h1 style="line-height: 100px;">Connect. Manage. Grow your retail business.</h1>
+			<h1 style="line-height: 100px;"><strong>Connect. Manage. Grow your retail business.</strong></h1>
 		</div>
 
 		<div class="basic">
+			<div class="row" style="margin: 80px 0 40px 0;">
+				<div class="col-md-2">
+				</div>
 
+				<div class="col-md-1">
+					<img style="margin: 10px 0;" src="ProductSync.png">
+				</div>
+
+				<div class="col-md-3">
+					<h4 class="dark">
+						Inventory Synchronization
+					</h4>
+
+					<h6 class="caps">
+						INTEGRATION
+					</h6>
+
+					<p class="light">
+						Catalog hundreds of items with
+						</br  >
+						out intuitive system. You'll soon
+						</br  >
+						find your entire inventory is easily
+						</br  >
+						organized and accessible.
+					</p>
+				</div>
+
+				<div class="col-md-1">
+					<img style="margin: 10px 0;" src="orderWorkFlow.png">
+				</div>
+
+				<div class="col-md-3">
+					<h4 class="dark">
+						Order Workflow
+					</h4>
+
+					<h6 class="caps">
+						ORDER MANAGEMENT
+					</h6>
+
+					<p class="light">
+						Every order that goes through our
+						</br  >
+						system is data we bring to you.
+						</br  >
+						Lost orders will be a thing of the
+						</br  >
+						past, and neatly structured in your
+						</br  >
+						system.
+					</p>
+				</div>
+
+				<div class="col-md-2">
+				</div>
+			</div>
+
+			<div class="row" style="margin: 0;">
+				<div class="col-md-2">
+				</div>
+
+				<div class="col-md-1">
+					<img style="margin: 10px 0;" src="PrepareEnrich.png">
+				</div>
+
+				<div class="col-md-3">
+					<h4 class="dark">
+						Prepare & Enrich
+					</h4>
+
+					<h6 class="caps">
+						PRODUCT INFORMATION MANAGEMENT
+					</h6>
+
+					<p class="light">
+						Detailed reporting with digestible
+						</br  >
+						data will let you know the status of
+						</br  >
+						your company. Always be
+						</br  >
+						informed with our robust reporting
+						</br  >
+						feature.
+					</p>
+				</div>
+
+				<div class="col-md-1">
+					<img style="margin: 10px 0;" src="Analytics.png">
+				</div>
+
+				<div class="col-md-3">
+					<h4 class="dark">
+						Analytics
+					</h4>
+
+					<h6 class="caps">
+						CHANNEL INTELLIGENCE
+					</h6>
+
+					<p class="light">
+						Manage your accounts with
+						</br  >
+						nChannel. Save money by keeping
+						</br  >
+						close track on your sales.
+					</p>
+				</div>
+
+				<div class="col-md-2">
+				</div>
+			</div>
+			<div class="col-md-5">
+			</div>
+			<div class="col-md-2" style="color: white; margin-top: 70px;">
+					<a href""><h4 class="button2">
+						<strong>View All Features</strong>
+					</h4></a>
+			</div>
+			<div class="col-md-5">
+			</div>
+		</div>
+
+		<div class="Farnsworth">
+			<img id="lside" src="Farnsworth1.png" style="position: relative; z-index: 2; float:left;">
+			<img id="lside" src="Farnsworth0.png" style="float: left; margin-left: -800px;">
 		</div>
 
 		<div class="explore">
-
+			<h2>Explore the App</h2>
+			<img src="Watch.png">
 		</div>
 
 		<div class="we-can-help">
@@ -133,12 +262,22 @@
 
 		</div>
 
-		<div id="support">
+		<div class="Farnsworthr">
+			<img id="rside" src="Farnsworth1.png" style="float:right; position: relative; z-index: 2;">
+			<img id="rside" src="Farnsworthright.png" style="float:right; margin-right: -400px;">
+		</div>
 
+		<div id="support">
+			
 		</div>
 
 		<div class="basic">
 
+		</div>
+
+		<div class="Farnsworth">
+			<img id="lside" src="Farnsworth1.png" style="position: relative; z-index: 2; float: left;">
+			<img id="lside" src="Farnsworth0.png" style="float: left;">
 		</div>
 
 		<div class="certified">
@@ -149,7 +288,7 @@
 		</div>
 
 		<div class="news">
-			<div class="row">
+			<div class="row" style="margin: 0;">
 				<div class="col-md-2">
 				</div>
 
