--- a/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.html
+++ b/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.html
@@ -246,7 +246,7 @@
 
 		<div class="Farnsworth">
 			<img id="lside" src="Farnsworth1.png" style="position: relative; z-index: 2; float:left;">
-			<img id="lside" src="Farnsworth0.png" style="float: left; margin-left: -800px;">
+			<img id="lside" src="Farnsworth0.png" style="float: left; margin-left: 0;">
 		</div>
 
 		<div class="explore">
@@ -264,7 +264,7 @@
 
 		<div class="Farnsworthr">
 			<img id="rside" src="Farnsworth1.png" style="float:right; position: relative; z-index: 2;">
-			<img id="rside" src="Farnsworthright.png" style="float:right; margin-right: -400px;">
+			<img id="rside" src="Farnsworthright.png" style="float:right; margin-right: -1200px;">
 		</div>
 
 		<div id="support">
