faux scrolling nChannel image

--- a/Assignments/dfarnsworth/Bootstrap nChannel/Bootstrap_nChannel.html
+++ b/Assignments/dfarnsworth/Bootstrap nChannel/Bootstrap_nChannel.html
@@ -246,7 +246,7 @@
 
 		<div class="Farnsworth">
 			<img id="lside" src="cache/Farnsworth1.png" style="position: relative; z-index: 2; float:left;">
-			<img id="lside" src="cache/Farnsworth0.png" style="float: left; margin-left: 0;">
+			<img id="lscroll" class="ex0" src="cache/Farnsworth0.png" style="float: left;">
 		</div>
 
 		<div class="explore">
@@ -277,7 +277,7 @@
 
 		<div class="Farnsworth">
 			<img id="lside" src="cache/Farnsworth1.png" style="position: relative; z-index: 2; float: left;">
-			<img id="lside" src="cache/Farnsworth0.png" style="float: left;">
+			<img id="lscroll" src="cache/Farnsworth0.png" style="float: left;">
 		</div>
 
 		<div class="certified">
