Last nChannel commit... true scrolling image
Kung Fu Grip on the JavaScript

--- a/Assignments/dfarnsworth/Bootstrap nChannel/Bootstrap_nChannel.html
+++ b/Assignments/dfarnsworth/Bootstrap nChannel/Bootstrap_nChannel.html
@@ -11,7 +11,7 @@
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
-	<script type="text/javascript" src="cache/Sticky Header.js"></script>
+	<script type="text/javascript" src="cache/Recreate nChannel.js"></script>
 
 	<script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
@@ -108,7 +108,7 @@
 				<div class="col-md-5">
 				</div>
 
-			<div class="dots" style="background-image: url(dot-pat.png); background-repeat: repeat; margin-top: 174px;">
+			<div class="dots" style="background-image: url(cache/dot-pat.png); background-repeat: repeat; margin-top: 174px;">
 			</div>
 
 			<img src="cache/connect.png" style="margin-top: -314px;">
@@ -246,7 +246,7 @@
 
 		<div class="Farnsworth">
 			<img id="lside" src="cache/Farnsworth1.png" style="position: relative; z-index: 2; float:left;">
-			<img id="lscroll" class="ex0" src="cache/Farnsworth0.png" style="float: left;">
+			<img id="dwf" src="cache/Farnsworth0.png" style="float: left; margin-left: -1170px;">
 		</div>
 
 		<div class="explore">
@@ -262,9 +262,9 @@
 
 		</div>
 
-		<div class="Farnsworthr">
+		<div class="Farnsworthr" style="overflow-x:hidden;">
 			<img id="rside" src="cache/Farnsworth1.png" style="float:right; position: relative; z-index: 2;">
-			<!--<img id="rside" src="cache/Farnsworthright.png" style="float:right; margin-right: -1200px;">-->
+			<img id="dwf0" src="cache/Farnsworthright.png" style="float:right; margin-right: -1180px;">
 		</div>
 
 		<div id="support">
@@ -277,7 +277,7 @@
 
 		<div class="Farnsworth">
 			<img id="lside" src="cache/Farnsworth1.png" style="position: relative; z-index: 2; float: left;">
-			<img id="lscroll" src="cache/Farnsworth0.png" style="float: left;">
+			<img id="dwf1" src="cache/Farnsworth0.png" style="float: left;">
 		</div>
 
 		<div class="certified">
