More work on final

--- a/Assignments/clinville/Final/stout_contact.html
+++ b/Assignments/clinville/Final/stout_contact.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-	<title>Stout Hardware | Home</title>
+	<title>Stout Hardware | Contact Us</title>
 	<link rel="stylesheet" type="text/css" href="stout.css">
 </head>
 <body>
-	<div class="heading"><center>
-		<h1>Stout Hardware</h1>
+	<div><center>
+		<h1 class="heading">Stout Hardware</h1>
 		<h2>Bringing you the best service since 1880</h2></center>
 	</div>
 	<div class="main">
@@ -19,7 +19,22 @@
 				<th><a href="stout_specials.html" style="text-decoration:none;">Monthly Specials</a></th>
 			</tr>
 		</table>
-	<div>
-
+	<div class="contact">
+		<br><br><br>
+	Lyle Bartlett<br>
+	Lindsey Bartlett<br>
+	116 South Spring Street<br>
+	Harrisville, WV 26362<br>
+	Phone: 304-643-2737<br>
+	Fax: 304-643-2737<br>
+	Email: <a href="mailto:stouthardware@zoominternet.net">stouthardware@zoominternet.net</a><br>
+	Twitter: <a href="https://twitter.com/StoutHardware" target="_blank">@StoutHardware</a></br>
+	<br><br>
+	Hours:<br>
+	Monday - Friday: 8AM - 5PM<br>
+	Saturday: 8AM - 2PM<br>
+	Sunday: Closed<br>
+	</div>
+</div>
 </body>
 </html>
