--- a/Assignments/clinville/Final/stout_directions.html
+++ b/Assignments/clinville/Final/stout_directions.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-	<title>Stout Hardware | Home</title>
+	<title>Stout Hardware | Directions</title>
 	<link rel="stylesheet" type="text/css" href="stout.css">
 </head>
 <body>
-	<div class="heading"><center>
-		<h1>Stout Hardware</h1>
+	<div><center>
+		<h1 class="heading">Stout Hardware</h1>
 		<h2>Bringing you the best service since 1880</h2></center>
 	</div>
 	<div class="main">
@@ -19,7 +19,6 @@
 				<th><a href="stout_specials.html" style="text-decoration:none;">Monthly Specials</a></th>
 			</tr>
 		</table>
-	<div>
 	<p>
 	<div>Directions from US-50 E
 	<ul><li>Take the WV-16 exit toward Ellenboro/Harrisville</li>
@@ -33,5 +32,6 @@
     <li>Stout Hardware will be on your right</li></ul>
 	</p>
 	</div>
+</div>
 </body>
 </html>
