--- a/Assignments/clinville/Final/stout_services.html
+++ b/Assignments/clinville/Final/stout_services.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-	<title>Stout Hardware | Home</title>
+	<title>Stout Hardware | Services</title>
 	<link rel="stylesheet" type="text/css" href="stout.css">
 </head>
 <body>
-	<div class="heading"><center>
-		<h1>Stout Hardware</h1>
+	<div><center>
+		<h1 class="heading">Stout Hardware</h1>
 		<h2>Bringing you the best service since 1880</h2></center>
 	</div>
 	<div class="main">
@@ -19,8 +19,8 @@
 				<th><a href="stout_specials.html" style="text-decoration:none;">Monthly Specials</a></th>
 			</tr>
 		</table>
-	<div>
-	<div> Stout Hardware has several services to offer. These include:
+	<div> <br>
+		Stout Hardware has several services to offer. These include:
 		<ul><li>small engine repair</li>
 		<li>key cutting</li>
 		<li>glass cutting</li>
@@ -30,7 +30,8 @@
 		<li>custom pipe threading</li>
 		<li>knowledgeable staff ready and willing to help you</li></ul>
 	</div>
-	<div> <a href="http://e-catalog.bostwick-braun.com/Catalog/Catalog.aspx?qsCustType=DEALER" target="_blank">Order items</a> from our catalogue to have them delivered directly to our store.
-	<div>
+	<div><center><b> <a href="http://e-catalog.bostwick-braun.com/Catalog/Catalog.aspx?qsCustType=DEALER" target="_blank">Order items</a> from our catalogue to have them delivered directly to our store.</b></center>
+	</div>
+	</div>
 </body>
 </html>
