--- a/Assignments/clinville/Final/stout_specials.html
+++ b/Assignments/clinville/Final/stout_specials.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-	<title>Stout Hardware | Home</title>
+	<title>Stout Hardware | Monthly Specials</title>
 	<link rel="stylesheet" type="text/css" href="stout.css">
 </head>
 <body>
-	<div class="heading"><center>
-		<h1>Stout Hardware</h1>
+	<div><center>
+		<h1 class="heading">Stout Hardware</h1>
 		<h2>Bringing you the best service since 1880</h2></center>
 	</div>
 	<div class="main">
@@ -19,7 +19,8 @@
 				<th><a href="stout_specials.html" style="text-decoration:none;">Monthly Specials</a></th>
 			</tr>
 		</table>
-	<div>
-
+	<br><br>
+	<div><center><img src="coupon.png"></center>
+	</div>
 </body>
 </html>
