Title Page of Avengers webpage
Only the first page

--- a/Assignments/abrand/nchannel assignment/nchannelwebpage.html
+++ b/Assignments/abrand/nchannel assignment/nchannelwebpage.html
@@ -113,7 +113,7 @@
                             <p>From large catalogs, to variable pricing structures and complex item mapping, we've got it all covered.</p>
                             <a href="https://www.nchannel.com/industries/consumer-goods/"> Read More </a>
                         </div>
-                        <div class="block">
+                        <div>
                             <h3> Home </h3>
                             <p> We bring you simplified management, leaving you more time to communicate your unique brand through personalized customer service and interactions.</p>
                             <a href="https://www.nchannel.com/industries/home/"> Read More </a>
