--- a/Assignments/abrand/Final Project Avengers/Avengers Webpage.html
+++ b/Assignments/abrand/Final Project Avengers/Avengers Webpage.html
@@ -23,7 +23,7 @@
 		</div>
 
 
-		<div class="star" style="padding-top:25px"> 
+		<div class="star fadebottom" style="padding-top:25px"> 
 			
 
 			<span class="avengers" style="color:rgb(179, 179, 176)"> ASSEMBLE </span>
