--- a/Assignments/abrand/Final Project Avengers/Avengers Webpage.html
+++ b/Assignments/abrand/Final Project Avengers/Avengers Webpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Avengers <br> Assemble </title>
+	<title> Avengers Assemble </title>
 	<link rel="stylesheet" type="text/css" href="site(10).css">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="styles/css/font-awesome.min.css">
