More Finals Stuff

--- a/Assignments/akanios/Final Project/shieldmain.html
+++ b/Assignments/akanios/Final Project/shieldmain.html
@@ -9,38 +9,41 @@
 <body>
 
 
-	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation"><img class="minilogo" src="shieldbarlogo.png">
+	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation"><a href="shieldmain.html"><img class="minilogo" src="shieldbarlogo.png"></a>
 		<div class="container-fluid">
 			<p class="navbar-text">Welcome Agent</p>
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav navbar-right">
-				<li class="classifiedlink"><a href="#">Classified</a></li>
-		        <li class="dropdown">
-		         	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Avengers<span class="caret"></span></a>
-		         	<ul class="dropdown-menu" role="menu">
-		            	<li><a href="ironman.html"><img class="droplogo" src="ironmandrop.jpg">Iron Man</a></li>
-		            	<li><a href="#"><img class="droplogo" src="capdrop.jpg">Captain America</a></li>
-		            	<li><a href="#"><img class="droplogo" src="thordrop.jpg">Thor</a></li>
-		            	<li><a href="#"><img class="droplogo" src="hulkdrop.jpg">Hulk</a></li>
-		            	<li><a href="#"><img class="droplogo" src="hawkdrop.jpg">Hawkeye</a></li>
-		            	<li><a href="#">Black Widow</a></li>
-		          	</ul>
-		        </li>
-		      	</ul>
+					<ul class="nav navbar-nav navbar-right">
+					<li class="classifiedlink"><a href="#">Classified</a></li>
+			        <li class="dropdown">
+			         	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Avengers<span class="caret"></span></a>
+			         	<ul class="dropdown-menu" role="menu">
+			            	<li><a href="ironman.html"><img class="droplogo" src="ironmandrop.jpg">Iron Man</a></li>
+			            	<li><a href="#"><img class="droplogo" src="capdrop.jpg">Captain America</a></li>
+			            	<li><a href="restricted.html"><img class="droplogo" src="thordrop.jpg">Thor</a></li>
+			            	<li><a href="restricted.html"><img class="droplogo" src="hulkdrop.jpg">Hulk</a></li>
+			            	<li><a href="restricted.html"><img class="droplogo" src="hawkdrop.jpg">Hawkeye</a></li>
+			            	<li><a href="restricted.html"><img class="droplogo" src="widowdrop.png">Black Widow</a></li>
+			          	</ul>
+			        </li>
+			      	</ul>
 
-		      	<ul class="nav navbar-nav navbar-right">
-		        <li class="dropdown">
-		          	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Agents<span class="caret"></span></a>
-		          	<ul class="dropdown-menu" role="menu">
-		            	<li><a href="#"><img class="droplogo" src="shielddrop.jpg">Phil Coulson</a></li>
-		            	<li><a href="#"><img class="droplogo" src="shielddrop.jpg">Skye</a></li>
-		            	<li><a href="#"><img class="droplogo" src="shielddrop.jpg">Melinda May</a></li>
-		            	<li><a href="#"><img class="droplogo" src="shielddrop.jpg">Jemma Simmons</a></li>
-		            	<li><a href="#"><img class="droplogo" src="shielddrop.jpg">Leopold Fitz</a></li>
-		            	<li><a href="#"><img class="droplogo" src="shielddrop.jpg">Lance Hunter</a></li>
-		          	</ul>
-		        </li>
-		      	</ul>
+			      	<ul class="nav navbar-nav navbar-right">
+			        <li class="dropdown">
+			          	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Agents<span class="caret"></span></a>
+			          	<ul class="dropdown-menu" role="menu">
+			            	<li><a href="coulson.html"><img class="droplogo" src="shielddrop.jpg">Phil Coulson</a></li>
+			            	<li><a href="restricted.html"><img class="droplogo" src="shielddrop.jpg">Skye</a></li>
+			            	<li><a href="restricted.html"><img class="droplogo" src="shielddrop.jpg">Melinda May</a></li>
+			            	<li><a href="restricted.html"><img class="droplogo" src="shielddrop.jpg">Jemma Simmons</a></li>
+			            	<li><a href="restricted.html"><img class="droplogo" src="shielddrop.jpg">Leopold Fitz</a></li>
+			            	<li><a href="restricted.html"><img class="droplogo" src="shielddrop.jpg">Lance Hunter</a></li>
+			          	</ul>
+			        </li>
+			      	</ul>
+			    <div class="logoutbtn">  	
+			    <button onclick="location.href='index.html'" type="button" class="btn btn-danger btn-xs">Logout</button>
+				</div>
 			</div>
 	    </div>  
 	</nav>
@@ -49,7 +52,7 @@
 		</div>
 
 	<div class="bodycontainer">
-		<img class="hydralogo" src="hydralogo.png">
+		<a href="hydralogin.html"><img class="hydralogo" src="hydralogo.png"></a>
 	</div>
 
 
