--- a/Assignments/akanios/Final Project/coulson.html
+++ b/Assignments/akanios/Final Project/coulson.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Avenger Profile: Tony Stark</title>
+	<title>Director Profile: Phil Coulson</title>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"> </script>
@@ -21,7 +21,7 @@
 		            	<li><a href="restricted.html"><img class="droplogo" src="capdrop.jpg">Captain America</a></li>
 		            	<li><a href="restricted.html"><img class="droplogo" src="thordrop.jpg">Thor</a></li>
 		            	<li><a href="restricted.html"><img class="droplogo" src="hulkdrop.jpg">Hulk</a></li>
-		            	<li><a href="#"><img class="droplogo" src="hawkdrop.jpg">Hawkeye</a></li>
+		            	<li><a href="restricted.html"><img class="droplogo" src="hawkdrop.jpg">Hawkeye</a></li>
 		            	<li><a href="restricted.html"><img class="droplogo" src="widowdrop.png">Black Widow</a></li>
 		          	</ul>
 		        </li>
@@ -53,11 +53,12 @@
 		<div class="bodycontainer">
 
 			<div class="bodyheader">
-				Avengers Profile: Tony Stark / Iron Man
+				Our Fearless Leader : Phil Coulson
 			</div>
 
 
 		</div>
+
 
 </body>
 </html>
