Main Page continuation
Heading worked on

--- a/Assignments/abrand/Final Project Avengers/Avengers Webpage.html
+++ b/Assignments/abrand/Final Project Avengers/Avengers Webpage.html
@@ -18,7 +18,7 @@
 		</div>
 
 		<div class="star bgblack">
-			<a href="http://marvel.com/movies/movie/152/marvels_the_avengers"> <img src="http://img2.wikia.nocookie.net/__cb20131222184921/glee/images/thumb/3/3d/Avengers_logo.jpg/640px-Avengers_logo.jpg"> </a>
+			<a href="Avengers Main Page.html"> <img src="http://img2.wikia.nocookie.net/__cb20131222184921/glee/images/thumb/3/3d/Avengers_logo.jpg/640px-Avengers_logo.jpg"> </a>
 
 		</div>
 
